  * debian/.gitignore: Synchronise some patterns with clean target
  * Add the metapackages previously built by src:linux-latest:
    - Add template and NEWS files from linux-latest
    - Rename added templates to be consistent with existing templates
    - Fix some inconsistencies in metapackage templates
    - Define pkg.linux.nometa build profile to exclude the metapackages

  [ Uwe Kleine-König ]
  * [arm64] enable I2C_QCOM_GENI for Lenovo C630

 -- Ben Hutchings <ben@decadent.org.uk>  Sun, 25 Aug 2019 19:27:43 +0100

linux (5.3~rc5-1~exp2) experimental; urgency=medium

  * tools/perf: pmu-events: Fix reproducibility
  * Fix FTBFS:
    - Update "kbuild: Make the toolchain variables easily overwritable" for 5.3
    - udeb: Make nic-wireless-modules depend on crypto-modules
  * debian/control: Remove build profile qual for rsync, needed for
    headers_install
  * debian/changelog: Move older entries to changelog.old

 -- Ben Hutchings <ben@decadent.org.uk>  Sun, 25 Aug 2019 16:28:41 +0100

linux (5.3~rc5-1~exp1) experimental; urgency=medium

  * New upstream release candidate

  [ Ben Hutchings ]
  * aufs: Update support patchset to aufs5.x-rcN 20190805
  * [rt] Disable until it is updated for 5.3 or later
  * [powerpcspe] Remove all support for powerpcspe, which is dead upstream
  * linux-headers: Change per-flavour Makefile to match upstream out-of-tree
    builds
  * debian/bin/genorig.py: Import debian.deb822 instead of deprecated deb822
  * [arm64] Use armhf cross-compiler for building compat vDSO
  * Documentation: Fix broken link to CIPSO draft

  [ Lubomir Rintel ]
  * udeb: input-modules: Add OLPC AP-SP keyboard
  * [armhf] Add camera, EC and battery drivers for OLPC XO-1.75 laptop.

 -- Ben Hutchings <ben@decadent.org.uk>  Sat, 24 Aug 2019 19:07:56 +0100

linux (5.2.17-1) unstable; urgency=medium

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.2.10