@@ -75,6 +75,8 @@ binary-arch-arch: \
 	$(call if_package, linux-libc-dev,               install-libc-dev_$(ARCH)) \
 	$(call if_package, linux-kbuild-$(VERSION),      install-kbuild) \
 	$(call if_package, linux-perf-$(VERSION),        install-perf) \
+	$(if $(filter-out x-$(VERSION),x$(SOURCE_SUFFIX)), \
+	  $(call if_package, linux-perf$(SOURCE_SUFFIX), install-perf-meta)) \
 	$(call if_package, linux-bootwrapper-$(ABINAME), install-bootwrapper) \
 	$(call if_package, usbip,                        install-usbip) \
 	$(call if_package, linux-cpupower,               install-cpupower) \
@@ -87,13 +89,19 @@ build-indep: \
 binary-indep: \
 	$(call if_package, $(SOURCE_BASENAME)-doc-$(VERSION), install-doc) \
 	$(call if_package, $(SOURCE_BASENAME)-source-$(VERSION), install-source) \
+	$(if $(filter-out x-$(VERSION),x$(SOURCE_SUFFIX)), \
+	  $(call if_package, $(SOURCE_BASENAME)-doc$(SOURCE_SUFFIX), install-doc-meta) \
+	  $(call if_package, $(SOURCE_BASENAME)-source$(SOURCE_SUFFIX), install-source-meta)) \
 	$(call if_package, $(SOURCE_BASENAME)-support-$(ABINAME), install-support) \
 	$(call if_package, lockdep,                      install-lockdep)
 
 binary-arch-flavour: \
 	$(call if_package, $(IMAGE_PACKAGE_NAME),        install-image_$(ARCH)_$(FEATURESET)_$(FLAVOUR)) \
+	$(call if_package, linux-image$(SOURCE_SUFFIX)$(LOCALVERSION), install-image-meta_$(ARCH)_$(FEATURESET)_$(FLAVOUR)) \
 	$(call if_package, linux-image-$(ABINAME)$(LOCALVERSION)-dbg, install-image-dbg_$(ARCH)_$(FEATURESET)_$(FLAVOUR)) \
-	$(call if_package, linux-headers-$(ABINAME)$(LOCALVERSION), install-headers_$(ARCH)_$(FEATURESET)_$(FLAVOUR))
+	$(call if_package, linux-image$(SOURCE_SUFFIX)$(LOCALVERSION)-dbg, install-image-dbg-meta_$(ARCH)_$(FEATURESET)_$(FLAVOUR)) \
+	$(call if_package, linux-headers-$(ABINAME)$(LOCALVERSION), install-headers_$(ARCH)_$(FEATURESET)_$(FLAVOUR)) \
+	$(call if_package, linux-headers$(SOURCE_SUFFIX)$(LOCALVERSION), install-headers-meta_$(ARCH)_$(FEATURESET)_$(FLAVOUR))
 
 binary-indep-featureset: \
 	$(call if_package, linux-headers-$(ABINAME)-common$(LOCALVERSION), install-common-headers_$(FEATURESET))
@@ -275,6 +283,18 @@ ifeq (,$(filter nodoc,$(DEB_BUILD_PROFILES)))
 endif
 	+$(MAKE_SELF) install-base
 
+install-doc-meta: PACKAGE_NAME = $(SOURCE_BASENAME)-doc$(SOURCE_SUFFIX)
+install-doc-meta: PACKAGE_DIR = debian/$(PACKAGE_NAME)
+install-doc-meta: DH_OPTIONS = -p$(PACKAGE_NAME)
+install-doc-meta:
+	dh_testdir
+	dh_prep
+	mkdir -p $(PACKAGE_DIR)/usr/share/doc/$(PACKAGE_NAME)
+	for file in CREDITS.gz Documentation html MAINTAINERS.gz; do \
+		ln -sf ../$(SOURCE_BASENAME)-doc-$(VERSION)/$$file $(PACKAGE_DIR)/usr/share/doc/$(PACKAGE_NAME)/ || exit; \
+	done
+	+$(MAKE_SELF) install-base
+
 install-headers_$(ARCH): PACKAGE_NAMES = linux-headers-$(ABINAME)-all linux-headers-$(ABINAME)-all-$(ARCH)
 install-headers_$(ARCH): DH_OPTIONS = $(foreach p, $(PACKAGE_NAMES), -p$(p))
 install-headers_$(ARCH):
@@ -347,6 +367,13 @@ install-headers_$(ARCH)_$(FEATURESET)_$(FLAVOUR): $(STAMPS_DIR)/build_$(ARCH)_$(
 	ln -s /usr/src/$(PACKAGE_NAME) $(PACKAGE_DIR)/lib/modules/$(REAL_VERSION)/build
 	ln -s /usr/src/$(PACKAGE_NAME_COMMON) $(PACKAGE_DIR)/lib/modules/$(REAL_VERSION)/source
 
+	+$(MAKE_SELF) install-base
+
+install-headers-meta_$(ARCH)_$(FEATURESET)_$(FLAVOUR): PACKAGE_NAME = linux-headers$(SOURCE_SUFFIX)$(LOCALVERSION)
+install-headers-meta_$(ARCH)_$(FEATURESET)_$(FLAVOUR): DH_OPTIONS = -p$(PACKAGE_NAME)
+install-headers-meta_$(ARCH)_$(FEATURESET)_$(FLAVOUR):
+	dh_testdir
+	dh_prep
 	+$(MAKE_SELF) install-base
 
 install-libc-dev_$(ARCH): PACKAGE_NAME = linux-libc-dev
@@ -463,6 +490,15 @@ install-image_$(ARCH)_$(FEATURESET)_$(FLAVOUR)_bug:
 	chmod 755 $(PACKAGE_DIR)/usr/share/bug/$(PACKAGE_NAME)/script
 	printf "RELEASE='$(REAL_VERSION)'\nDISTRIBUTOR='$(DISTRIBUTOR)'\nSOURCEVERSION='$(SOURCEVERSION)'\nPACKAGE_NAME='$(PACKAGE_NAME)'\nPACKAGE_VERSION='$(SOURCEVERSION)'" > $(PACKAGE_DIR)/usr/share/bug/$(PACKAGE_NAME)/info
 
+install-image-meta_$(ARCH)_$(FEATURESET)_$(FLAVOUR): PACKAGE_NAME = linux-image$(SOURCE_SUFFIX)$(LOCALVERSION)
+install-image-meta_$(ARCH)_$(FEATURESET)_$(FLAVOUR): DH_OPTIONS = -p$(PACKAGE_NAME)
+install-image-meta_$(ARCH)_$(FEATURESET)_$(FLAVOUR):
+	dh_testdir
+	dh_prep
+	ln -sf linux-image.meta.NEWS debian/$(PACKAGE_NAME).NEWS
+	dh_bugfiles
+	+$(MAKE_SELF) install-base
+
 install-image-dbg_$(ARCH)_$(FEATURESET)_$(FLAVOUR): REAL_VERSION = $(ABINAME)$(LOCALVERSION)
 install-image-dbg_$(ARCH)_$(FEATURESET)_$(FLAVOUR): PACKAGE_NAME = linux-image-$(REAL_VERSION)-dbg
 install-image-dbg_$(ARCH)_$(FEATURESET)_$(FLAVOUR): PACKAGE_DIR = debian/$(PACKAGE_NAME)
@@ -498,6 +534,14 @@ endif
 	ln -s ../../../boot/vmlinux-$(REAL_VERSION) $(DEBUG_DIR)/lib/modules/$(REAL_VERSION)/vmlinux
 	+$(MAKE_SELF) install-base
 
+install-image-dbg-meta_$(ARCH)_$(FEATURESET)_$(FLAVOUR): PACKAGE_NAME = linux-image$(SOURCE_SUFFIX)$(LOCALVERSION)-dbg
+install-image-dbg-meta_$(ARCH)_$(FEATURESET)_$(FLAVOUR): DH_OPTIONS = -p$(PACKAGE_NAME)
+install-image-dbg-meta_$(ARCH)_$(FEATURESET)_$(FLAVOUR):
+	dh_testdir
+	dh_prep
+	dh_lintian
+	+$(MAKE_SELF) install-base
+
 install-signed-template_$(ARCH): PACKAGE_NAME = linux-image-$(ARCH)-signed-template
 install-signed-template_$(ARCH): DH_OPTIONS = -p$(PACKAGE_NAME)
 install-signed-template_$(ARCH): PACKAGE_DIR = debian/$(PACKAGE_NAME)
@@ -512,6 +556,7 @@ ifneq (,$(filter linux-image-$(ARCH)-signed-template,$(packages_enabled)))
 	PYTHONHASHSEED=0 debian/bin/gencontrol_signed.py $(ARCH)
 	cp -R	debian/compat \
 		debian/copyright \
+		debian/linux-image.meta.NEWS \
 		debian/signing_templates/README.source \
 		debian/signing_templates/rules \
 		debian/signing_templates/rules.real \
@@ -559,6 +604,13 @@ install-source: $(BUILD_DIR)/$(SOURCE_BASENAME)-source-$(UPSTREAMVERSION).tar.xz
 # data.tar.gz!) makes dpkg and dak happy, but is incomaptible with
 # other things (#725492).  So use the fastest real gzip mode.
 	+$(MAKE_SELF) install-base BUILDDEB_ARGS='-Zgzip -z1'
+
+install-source-meta: PACKAGE_NAME = $(SOURCE_BASENAME)-source$(SOURCE_SUFFIX)
+install-source-meta: DH_OPTIONS = -p$(PACKAGE_NAME)
+install-source-meta:
+	dh_testdir
+	dh_prep
+	+$(MAKE_SELF) install-base
 
 install-config_$(ARCH): PACKAGE_NAME = $(SOURCE_BASENAME)-config-$(VERSION)
 install-config_$(ARCH): DH_OPTIONS = -p$(PACKAGE_NAME)
@@ -681,6 +733,13 @@ endif
 	dh_gencontrol
 	dh_md5sums
 	dh_builddeb
+
+install-perf-meta: PACKAGE_NAME = linux-perf$(SOURCE_SUFFIX)
+install-perf-meta: DH_OPTIONS = -p$(PACKAGE_NAME)
+install-perf-meta:
+	dh_testdir
+	dh_prep
+	+$(MAKE_SELF) install-base
 
 build-usbip: $(STAMPS_DIR)/build-tools-headers
 	$(call make-tools,tools/usb/usbip)
