@@ -19,6 +19,7 @@ linux (5.3.1-1~exp1) UNRELEASED; urgency=medium
     - Rename added templates to be consistent with existing templates
     - Fix some inconsistencies in metapackage templates
     - Define pkg.linux.nometa build profile to exclude the metapackages
+    - Build the metapackages by default (Closes: #583849, #941042)
 
   [ Uwe Kleine-König ]
   * [arm64] enable I2C_QCOM_GENI for Lenovo C630
